web/styles: Fix alignment and rotation axis of slow-send spinner.
Fixes #38753.

--- a/web/styles/zulip.css
+++ b/web/styles/zulip.css
@@ -842,7 +842,7 @@ strong {
 .messagebox-content .slow-send-spinner {
     display: block;
     font-size: 0.8571em; /* 12px at 14px/em */
-    text-align: right;
+    margin-left: auto;
     opacity: 0.8;
     color: var(--color-text-default);
     animation: rotate 1s infinite linear;
